--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.8,<3.13"
+matchms = "^0.24.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -20,6 +21,7 @@ deptry = "^0.12.0"
 mypy = "^1.5.1"
 pre-commit = "^3.4.0"
 tox = "^4.11.1"
+ipykernel = "^6.29.4"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
@@ -39,6 +41,10 @@ check_untyped_defs = "True"
 warn_return_any = "True"
 warn_unused_ignores = "True"
 show_error_codes = "True"
+
+[[tool.mypy.overrides]]
+module = "matchms.*"
+ignore_missing_imports = "True"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
