modified tests and added types for requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pre-commit = "^3.4.0"
 tox = "^4.11.1"
 ipykernel = "^6.29.4"
 requests-mock = "^1.12.1"
+types-requests = "^2.31.0.20240406"
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = "^1.4.2"
