--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.mypy]
 files = ["mgf_filterer"]
 disallow_untyped_defs = "True"
-disallow_any_unimported = "True"
+disallow_any_unimported = "False"
 no_implicit_optional = "True"
 check_untyped_defs = "True"
 warn_return_any = "True"
